[package]
name = "level-hash"
version = "0.1.0"
edition = "2021"
description = "Level Hash is write-optimized and high-performance hashing index scheme for persistent memory"
authors = [ "Akash Yadav <contact@itsaky.com>" ]
homepage = "https://github.com/AndroidIDEOfficial/level-hash"
repository = "https://github.com/AndroidIDEOfficial/level-hash"
license = "GPL-3"
keywords = ["level-hash", "hash", "hashing", "persistent", "memory"]
categories = ["algorithms"]

[dependencies]
jni = "0.21.1"
byteorder = "1.5.0"
libc = "0.2.155"
memmap2 = "0.9.4"
rand = "0.8.5"
highway = "1.2.0"

[dev-dependencies]
float-cmp = "0.9.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "level_benchmarks"
harness = false
