[package]
name = "level-hash"
version = "0.1.0"
edition = "2021"
description = "Level Hash is write-optimized and high-performance hashing index scheme for persistent memory"
authors = ["Akash Yadav <contact@itsaky.com>"]
homepage = "https://github.com/AndroidIDEOfficial/level-hash"
repository = "https://github.com/AndroidIDEOfficial/level-hash"
license = "GPL-3"
keywords = ["level-hash", "hash", "hashing", "persistent", "memory"]
categories = ["algorithms"]

[dependencies]
byteorder = "1.5.0"
libc = "0.2.155"
memmap2 = "0.9.4"
rand = "0.8.5"
paste = "1.0.15"

[dev-dependencies]
float-cmp = "0.9.0"
gxhash = "3.4.1"
async-channel = "2.3.1"
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
bindgen = "0.65.1"
cmake = "0.1.50"

[lib]
crate-type = ["rlib", "dylib"]

[profile.release]
lto = true
strip = true

[profile.release-with-debug]
inherits = "release"
lto = true
strip = false
debug = true

[[bench]]
name = "level_benchmarks"
harness = false

[[example]]
name = "insert_1000000"

